TEST_PROGRAMS/INVALID/15/semicolon3.go
package main;

func main()
{
   println("The { should not be on its own line!")
}
